fix footer spacing on mobile

--- a/src/scss/themes/_shared.scss
+++ b/src/scss/themes/_shared.scss
@@ -1,16 +1,12 @@
 @use "../utils";
 
-.footer-grid {
+@mixin grid-footer {
+  display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
   align-content: center;
   justify-content: center;
   height: min(60vh, 25rem);
-}
-
-@mixin grid-footer {
-  @extend .footer-grid;
-  display: grid;
   width: 100%;
   padding: 0;
   overflow: hidden;
@@ -25,15 +21,19 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    grid-column: 4 / span 2;
     grid-row: 1 / span 4;
+    grid-column: 1 / span 4;
+
+    @container wrapper (width >= 480px) {
+      grid-column: 3 / span 4;
+    }
 
     @supports (grid-template-columns: subgrid) {
       display: grid;
       grid-template-columns: subgrid;
       grid-template-rows: subgrid;
       .footer-buttons {
-        grid-column: 1 / span 8;
+        grid-column: 1 / -1;
         grid-row: 1 / span 1;
       }
 
@@ -41,10 +41,7 @@
         grid-row: 2 / span 1;
         justify-self: center;
         align-self: start;
-        grid-column: 1 / span 4;
-        @container wrapper (min-width: 480px) {
-          grid-column: 1 / span 8;
-        }
+        grid-column: 1 / -1;
       }
 
       .footer-links {
